tests/error/comptime_arg_errors/generic.err
Error: Unsupported (at $FILE:8:11)
  | 
6 | 
7 | @guppy
8 | def foo(q: T @comptime) -> T:
  |            ^ Generic comptime arguments are not supported

Guppy compilation failed due to 1 previous error
